--- a/src/pl/css/MainStyle.css
+++ b/src/pl/css/MainStyle.css
@@ -14,6 +14,8 @@
 
 .base-background {
     -fx-background-color: -fx-dark-blue;
+    -fx-border-color: black;
+    -fx-border-width: 1px;
 }
 
 .common-text-colour {
