--- a/src/pl/fxml/LoginView.fxml
+++ b/src/pl/fxml/LoginView.fxml
@@ -5,6 +5,8 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
@@ -20,11 +22,16 @@
       </Label>
       <Pane prefHeight="34.0" prefWidth="446.0" styleClass="project-container" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Label layoutX="14.0" layoutY="4.0" styleClass="common-text-colour" text="WUAV Documentation System">
+            <Label layoutX="100.0" layoutY="4.0" styleClass="common-text-colour" text="Documentation System">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
+            <ImageView fitHeight="27.0" fitWidth="108.0" layoutX="14.0" layoutY="4.0" opacity="0.6" pickOnBounds="true" preserveRatio="true" styleClass="logo">
+               <image>
+                  <Image url="@../../images/paint.png" />
+               </image>
+            </ImageView>
          </children>
       </Pane>
       <HBox alignment="TOP_RIGHT" layoutX="706.0" layoutY="14.0" prefHeight="25.0" prefWidth="71.0" AnchorPane.rightAnchor="-1.0" AnchorPane.topAnchor="-1.0">
