--- a/src/pl/fxml/DrawingView.fxml
+++ b/src/pl/fxml/DrawingView.fxml
@@ -14,9 +14,16 @@
 
 <AnchorPane fx:id="anpMain" prefHeight="600.0" prefWidth="800.0" styleClass="base-background" stylesheets="@../css/MainStyle.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.controllers.DrawingViewController">
    <children>
+      <Polygon fill="#333333" layoutX="630.0" layoutY="60.0" points="-29.800012588500977, -22.400001525878906, 4.20001220703125, -59.9999885559082, -30.0, -59.9999885559082" smooth="false" stroke="TRANSPARENT" strokeType="INSIDE" AnchorPane.rightAnchor="166.0" AnchorPane.topAnchor="1.1444091796875E-5" />
+      <Label layoutX="634.0" layoutY="9.0" styleClass="common-text-colour" text="Drawing" AnchorPane.rightAnchor="95.0" AnchorPane.topAnchor="5.0">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
+      <AnchorPane fx:id="anpDrag" layoutX="-2.0" layoutY="2.0" prefHeight="46.0" prefWidth="790.0" />
       <ImageView fx:id="imvExistingDrawing" fitHeight="543.0" fitWidth="772.0" layoutX="14.0" layoutY="50.0" pickOnBounds="true" preserveRatio="true" />
       <AnchorPane layoutX="14.0" layoutY="40.0" prefHeight="551.0" prefWidth="781.0" style="-fx-border-color: white;" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="50.0" />
-      <AnchorPane layoutX="1.0" layoutY="-1.0" prefHeight="34.0" prefWidth="446.0" styleClass="project-container" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane fx:id="anpControls" layoutX="1.0" layoutY="-1.0" prefHeight="34.0" prefWidth="446.0" styleClass="project-container" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="0.0">
          <children>
             <Button fx:id="btnClear" layoutX="540.0" layoutY="2.0" mnemonicParsing="false" onAction="#clearCanvas" prefHeight="30.0" prefWidth="60.0" styleClass="project-button" text="Clear" textFill="#dc3545" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="3.0">
                <font>
@@ -88,7 +95,6 @@
             </Button>
          </children>
       </AnchorPane>
-      <Polygon fill="#333333" layoutX="630.0" layoutY="60.0" points="-30.0, -25.599994659423828, 4.20001220703125, -59.9999885559082, -30.0, -59.9999885559082" smooth="false" stroke="TRANSPARENT" strokeType="INSIDE" AnchorPane.rightAnchor="165.79998779296875" AnchorPane.topAnchor="1.1444091796875E-5" />
       <HBox alignment="TOP_RIGHT" layoutX="728.0" layoutY="1.0" prefHeight="25.0" prefWidth="71.0" AnchorPane.rightAnchor="-1.0" AnchorPane.topAnchor="-1.0">
          <children>
             <Button fx:id="minBtn" focusTraversable="false" mnemonicParsing="false" onAction="#minBtnPressed" text="_" />
@@ -97,10 +103,5 @@
       </HBox>
       <Line endX="14.250985145568848" endY="-23.307106018066406" layoutX="99.0" layoutY="57.0" startX="14.250986099243164" startY="10.385784149169922" stroke="WHITE" AnchorPane.leftAnchor="120.0" AnchorPane.topAnchor="0.0" />
       <Canvas fx:id="canvas" height="543.0" width="772.0" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="50.0" />
-      <Label layoutX="634.0" layoutY="9.0" styleClass="common-text-colour" text="Drawing" AnchorPane.rightAnchor="95.0" AnchorPane.topAnchor="5.0">
-         <font>
-            <Font name="System Bold" size="14.0" />
-         </font>
-      </Label>
    </children>
 </AnchorPane>
